Openshift/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-dev
  template:
    metadata:
      labels:
        app: backend-dev
    spec:
      containers:
      - name: backend
        image: docker.io/<your-username>/backend-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

        livenessProbe:
          httpGet:
            path: /api
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /api
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
