Openshift/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-dev
  template:
    metadata:
      labels:
        app: frontend-dev
    spec:
      containers:
      - name: frontend
        image: docker.io/<your-username>/frontend-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
