Openshift/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-dev
  template:
    metadata:
      labels:
        app: mongo-dev
    spec:
      containers:
      - name: mongo
        image: registry.redhat.io/rhscl/mongodb-36-rhel7
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: mongo-storage

        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
