Openshift/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-dev
  ports:
  - port: 5000
    targetPort: 5000
