Openshift/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-dev
  ports:
  - port: 8080
    targetPort: 8080
