Openshift/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo-dev
  ports:
  - port: 27017
    targetPort: 27017
